--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debugging": "^1.0.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
+    "ejs-lint": "^0.3.0",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "isomorphic-fetch": "^2.2.1",
